// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Heading correctly when scroll is false 1`] = `
.c0 {
  font-family: Proxima Nova;
  margin: 170px auto 90px auto;
}

.c0 h1 {
  display: block;
  position: relative;
  margin: 0;
  font-size: 230px;
  text-align: center;
  -webkit-letter-spacing: -10px;
  -moz-letter-spacing: -10px;
  -ms-letter-spacing: -10px;
  letter-spacing: -10px;
  text-shadow: 2px 3px 3px rgba(0,0,55,0.15);
}

.c0 span {
  display: block;
  width: 500px;
  margin: -24px auto 0 auto;
  font-size: 26px;
  font-weight: 100;
  line-height: 1.3;
  color: #006cff;
  text-align: center;
  text-shadow: none;
}

<Heading
  scroll={false}
>
  <styled.div
    scroll={false}
  >
    <div
      className="c0"
    >
      <h1>
        Adele
      </h1>
      <span>
        The repository of publically available design systems and pattern libraries
      </span>
    </div>
  </styled.div>
</Heading>
`;

exports[`renders Heading correctly when scroll is true 1`] = `
.c0 {
  font-family: Proxima Nova;
  margin: 170px auto 90px auto;
}

.c0 h1 {
  display: none;
  position: relative;
  margin: 0;
  font-size: 230px;
  text-align: center;
  -webkit-letter-spacing: -10px;
  -moz-letter-spacing: -10px;
  -ms-letter-spacing: -10px;
  letter-spacing: -10px;
  text-shadow: 2px 3px 3px rgba(0,0,55,0.15);
}

.c0 span {
  display: none;
  width: 500px;
  margin: -24px auto 0 auto;
  font-size: 26px;
  font-weight: 100;
  line-height: 1.3;
  color: #006cff;
  text-align: center;
  text-shadow: none;
}

<Heading
  scroll={true}
>
  <styled.div
    scroll={true}
  >
    <div
      className="c0"
    >
      <h1>
        Adele
      </h1>
      <span>
        The repository of publically available design systems and pattern libraries
      </span>
    </div>
  </styled.div>
</Heading>
`;
